--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.1
 phases:
   install:
     runtime-versions:
-        nodejs: 8
+        python: 3.7
   build:
     commands:
       - echo nothing to do yet
